Fix double scroll bar issue on mobile

--- a/frontend/src/app/favourites-list/favourites-list.component.css
+++ b/frontend/src/app/favourites-list/favourites-list.component.css
@@ -1,5 +1,6 @@
 .list-container {
-  height: calc(100vh - 4.5rem);
+  height: 100vh;
+  max-height: calc(100vh - 5rem);
   overflow: scroll;
   margin: 8px;
 }
